# DearDisplay

./: README.md  docker-compose.yml  platformio.ini
docs/: architecture.md  wiring.md
docs/hardware/v0-1-0/: DearDisplay.kicad_pcb  DearDisplay.kicad_pro  DearDisplay.kicad_sch
firmware/: README.md  platformio.ini
firmware/include/: Config.h  Display.h  bitmap.h  config.h  display.h  wifi.h
firmware/src/: Display.cpp  display.cpp  main.cpp  wifi.cpp
include/: Config.h  bitmap.h  display.h  wifi.h
server/: .gitignore  Cargo.toml  Dockerfile  README.md
server/src/: error.rs  main.rs
server/src/http/: display.rs  mod.rs  screenshot.rs
server/src/image/: mod.rs
server/src/image_processing/: mod.rs
src/: Display.cpp  display.cpp  main.cpp
web/: .prettierrc  Dockerfile  README.md  bun.lockb  next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx
web/src/app/screen/: page.tsx
web/src/app/upload/: page.tsx
web/src/components/: HtmlToImage.tsx
web/src/components/screens/: Date.tsx  Message.tsx  Weather.tsx
web/src/lib/: index.ts
web/src/types/: index.d.ts
